Added search code and Papa dependency, but react is unable to find papa

--- a/public/index.html
+++ b/public/index.html
@@ -31,5 +31,8 @@
       integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
       crossorigin="anonymous"
     ></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/4.5.0/papaparse.min.js"
+    crossorigin="anonymous">
+    </script>
   </body>
 </html>
